--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -99,10 +99,10 @@
               {{ if .logo }}
                 {{ if .institution_url }}
                   <a href="{{ .institution_url }}" target="_blank">
-                    <img class="fa-li" src="{{ $.Site.BaseURL }}media/logos/{{ .logo }}" style="max-width: 10%; padding-right: {{ .padding_logo }}px;">
+                    <img class="fa-li" src="media/logos/{{ .logo }}" style="max-width: 100%; padding-right: {{ .padding_logo }}px;">
                   </a>
                 {{ else }}
-                    <img class="fa-li" src="{{ $.Site.BaseURL }}media/logos/{{ .logo }}" style="max-width: 10%; padding-right: {{ .padding_logo }}px;">
+                    <img class="fa-li" src="media/logos/{{ .logo }}" style="max-width: 100%; padding-right: {{ .padding_logo }}px;">
                 {{ end }}
               {{ else }}
                 {{ if .institution_url }}
