Change into svg sapienza logo

--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -125,7 +125,8 @@
                 {{ if .grade }}
                   {{ if .gpa }}
                     <div class="box">
-                      <p class="grade" >{{ .grade }} </p>
+                      <p class="grade">{{ .grade }}</p>
+                      <p class="grade"> </p>
                       <p class="gpa">(gpa: {{ .gpa }})</p>
                     </div>
                   {{ else }}
