--- a/layouts/partials/widgets/about.html
+++ b/layouts/partials/widgets/about.html
@@ -126,8 +126,8 @@
                   {{ if .gpa }}
                     <div class="box">
                       <p class="grade">{{ .grade }}</p>
-                      <p class="grade"> </p>
-                      <p class="gpa">(gpa: {{ .gpa }})</p>
+                      <div class="spacer"></div>
+                      <p class="gpa">(GPA: {{ .gpa }})</p>
                     </div>
                   {{ else }}
                     <p class="grade">{{ .grade }}</p>
